# bazel-go-docker

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
cmd/: BUILD.bazel  main.go
